examples/test/testpolicy16351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16351
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key6: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value36
          key7: value34
      podSelector:
        matchLabels:
          key44: value31
          key6: value49
          key41: value49
